feat: add block and unblock user