@@ -1,5 +1,6 @@
 package com.teamloci.loci.domain.post.service;
 
+import com.teamloci.loci.domain.block.UserBlockService;
 import com.teamloci.loci.domain.friend.Friendship;
 import com.teamloci.loci.domain.friend.FriendshipRepository;
 import com.teamloci.loci.domain.friend.FriendshipStatus;
@@ -24,7 +25,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.dao.DataAccessException;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -43,7 +43,7 @@ public class PostService {
     private final PostRepository postRepository;
     private final UserRepository userRepository;
     private final FriendshipRepository friendshipRepository;
-    private final PostCommentRepository commentRepository;
+    private final UserBlockService userBlockService;
     private final PostReactionRepository reactionRepository;
     private final GeoUtils geoUtils;
     private final UserActivityService userActivityService;
@@ -146,6 +146,14 @@ public class PostService {
     public PostDto.FeedResponse getPostsByUser(Long myUserId, Long targetUserId, Long cursorId, int size) {
         if (!userRepository.existsById(targetUserId)) {
             throw new CustomException(ErrorCode.USER_NOT_FOUND);
+        }
+
+        List<Long> blockedIds = userBlockService.getBlockedUserIds(myUserId);
+        if (blockedIds.contains(targetUserId)) {
+            return PostDto.FeedResponse.builder()
+                    .posts(List.of())
+                    .hasNext(false)
+                    .build();
         }
 
         Pageable pageable = PageRequest.of(0, size + 1);
@@ -270,7 +278,10 @@ public class PostService {
         if (beaconId == null || beaconId.isBlank()) return List.of();
 
         List<User> friends = friendshipRepository.findActiveFriendsByUserId(myUserId);
-        List<Long> friendIds = friends.stream().map(User::getId).collect(Collectors.toList());
+        List<Long> friendIds = new ArrayList<>(friends.stream().map(User::getId).toList());
+
+        List<Long> blockedIds = userBlockService.getBlockedUserIds(myUserId);
+        friendIds.removeAll(blockedIds);
 
         if (friendIds.isEmpty()) {
             friendIds.add(-1L);
@@ -298,35 +309,18 @@ public class PostService {
 
     private List<PostDto.MapMarkerResponse> getMapMarkersOptimized(Double minLat, Double maxLat, Double minLon, Double maxLon, Long myUserId) {
         List<User> friends = friendshipRepository.findActiveFriendsByUserId(myUserId);
-        List<Long> friendIds = friends.stream().map(User::getId).collect(Collectors.toList());
+        List<Long> friendIds = new ArrayList<>(friends.stream().map(User::getId).toList());
+
+        List<Long> blockedIds = userBlockService.getBlockedUserIds(myUserId);
+        friendIds.removeAll(blockedIds);
+
         friendIds.add(myUserId);
 
         List<Object[]> results = userBeaconStatsRepository.findMarkersByFriendsInArea(
                 friendIds, minLat, maxLat, minLon, maxLon
         );
 
-        return results.stream()
-                .map(row -> {
-                    String beaconId = (String) row[0];
-                    Long count = ((Number) row[1]).longValue();
-                    String thumbnail = (String) row[2];
-                    java.sql.Timestamp ts = (java.sql.Timestamp) row[3];
-                    LocalDateTime latestAt = ts != null ? ts.toLocalDateTime() : null;
-
-                    GeoUtils.Pair<Double, Double> latLng = geoUtils.beaconIdToLatLng(beaconId);
-                    if (latLng == null) return null;
-
-                    return PostDto.MapMarkerResponse.builder()
-                            .beaconId(beaconId)
-                            .latitude(latLng.lat)
-                            .longitude(latLng.lng)
-                            .count(count)
-                            .thumbnailImageUrl(thumbnail)
-                            .latestPostedAt(latestAt)
-                            .build();
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        return mapToMarkerResponse(results);
     }
 
     private List<PostDto.MapMarkerResponse> mapToMarkerResponse(List<Object[]> results) {
@@ -360,7 +354,14 @@ public class PostService {
         if (friends.isEmpty()) {
             return List.of();
         }
-        List<Long> friendIds = friends.stream().map(User::getId).toList();
+        List<Long> friendIds = new ArrayList<>(friends.stream().map(User::getId).toList());
+
+        List<Long> blockedIds = userBlockService.getBlockedUserIds(myUserId);
+        friendIds.removeAll(blockedIds);
+
+        if (friendIds.isEmpty()) {
+            return List.of();
+        }
 
         List<Post> posts = postRepository.findLatestPostsByUserIds(friendIds);
 
@@ -368,9 +369,7 @@ public class PostService {
                 .map(p -> {
                     UserDto.UserResponse userResp = UserDto.UserResponse.from(p.getUser());
                     userResp.setRelationStatus("FRIEND");
-
                     GeoUtils.Pair<Double, Double> beaconLatLng = geoUtils.beaconIdToLatLng(p.getBeaconId());
-
                     return PostDto.FriendMapMarkerResponse.builder()
                             .user(userResp)
                             .beacon(PostDto.BeaconInfo.builder()
@@ -389,15 +388,16 @@ public class PostService {
     }
 
     public PostDto.FeedResponse getFriendFeed(Long myUserId, Long cursorId, int size) {
-
         List<User> friends = friendshipRepository.findActiveFriendsByUserId(myUserId);
-
         List<Long> targetUserIds = new ArrayList<>();
         targetUserIds.add(myUserId);
 
         for (User friend : friends) {
             targetUserIds.add(friend.getId());
         }
+
+        List<Long> blockedIds = userBlockService.getBlockedUserIds(myUserId);
+        targetUserIds.removeAll(blockedIds);
 
         Pageable pageable = PageRequest.of(0, size + 1);
         List<Post> posts = postRepository.findByUserIdInWithCursor(targetUserIds, cursorId, pageable);
@@ -555,7 +555,19 @@ public class PostService {
                     .totalCount(0L)
                     .build();
         }
-        List<Long> friendIds = friends.stream().map(User::getId).toList();
+
+        List<Long> friendIds = new ArrayList<>(friends.stream().map(User::getId).toList());
+
+        List<Long> blockedIds = userBlockService.getBlockedUserIds(myUserId);
+        friendIds.removeAll(blockedIds);
+
+        if (friendIds.isEmpty()) {
+            return PostDto.FriendVisitResponse.builder()
+                    .isVisitedByMe(isVisitedByMe)
+                    .visitors(List.of())
+                    .totalCount(0L)
+                    .build();
+        }
 
         PageRequest pageRequest = PageRequest.of(0, size);
         List<User> visitors = postRepository.findFriendsInBeacons(targetBeaconIds, friendIds, pageRequest);
